fix/style: сделать как миксин visibility-hidden, display-flex-column

--- a/frontend/src/components/ListChats/ListChats.scss
+++ b/frontend/src/components/ListChats/ListChats.scss
@@ -2,8 +2,7 @@
 
 
 .list-chats {
-    display: flex;
-    flex-direction: column;
+    @include flex-col;
     width: 15%;
     height: 100%;
     overflow: hidden;
@@ -28,7 +27,7 @@
     @media screen and (max-width : 719px) {
       width: 25%;
       opacity: 0;
-      visibility: hidden;
+      @include visibility-h;
       position: relative;
       left: -15%;
       transition: opacity .2s ease, visibility .2s ease, left .3s ease;
@@ -44,7 +43,7 @@
 
     @media screen and (min-width : 768px) {
       &:hover {
-        cursor: pointer;
+        // cursor: pointer;
         // opacity: .5;
       }
     }
